--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>com.cloudera.bigdata</groupId>
-  <artifactId>BigDataAnalysis</artifactId>
+  <artifactId>BigValue</artifactId>
   <version>1.0</version>
 <packaging>jar</packaging>  
 
