--- a/properties/conf-ftp2hdfs2hbase-sample.properties
+++ b/properties/conf-ftp2hdfs2hbase-sample.properties
@@ -2,7 +2,7 @@ queueLength=3000
 fetchParallel=72
 threadsPerMapper=2
 dataSourceClass=com.cloudera.bigdata.analysis.dataload.source.HDFSDataSource
-fileParserClass=com.cloudera.bigdata.analysis.dataload.source.ZJCMCCFileParser
+fileParserClass=com.cloudera.bigdata.analysis.dataload.source.TextFileParser
 
 parserType=text
 instanceDocPath=./conf/ftp2hbase.xml
