--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-core</artifactId>
+            <version>4.6.0-HBase-1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.1</version>
@@ -149,9 +155,9 @@
         
 		<!--  -->
         <dependency>
-            <groupId>org.hyperic.sigar</groupId>
+            <groupId>org.fusesource</groupId>
             <artifactId>sigar</artifactId>
-            <version>1.6.5</version>
+            <version>1.6.4</version>
         </dependency>
 
         <dependency>
